# cmake-uwpconsoleapp

./: .gitignore  CMakeLists.txt  README.md  build.bat  generate.bat
Demo/: CMakeLists.txt
Demo/assets/: TemporaryKey.pfx  package.appxManifest
Demo/source/: main.cpp
Hello/: CMakeLists.txt
Hello/include/: hello.h
Hello/source/: hello.cpp
